--- a/src/main/resources/templates/savecourse.html
+++ b/src/main/resources/templates/savecourse.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html style=margin:4em xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Course</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Course</h1>
 	<form action="#" th:action="@{/savecourse}" th:object= ${course} method="post">
 		<p>Name: <input type="text" th:field="${course.name}"/></p>
-
+		
 		<div style="clear: both; display: block; height: 10px;"></div>
-		<input type="submit" value="Save"/>
-		<input type="reset" value="Reset"/>
+		<input type="submit" value="Save" class="btn btn-primary"/>
+		<input type="reset" value="Reset" class="btn btn-primary"/>
 	</form>
 
     
