--- a/src/main/resources/templates/savehomework.html
+++ b/src/main/resources/templates/savehomework.html
@@ -1,24 +1,29 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html style=margin:4em xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Homework</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Homework</h1>
 	<form action="#" th:action="@{/savehomework}" th:object= ${homework} method="post">
 		<p>Task: <input type="text" th:field="${homework.task}"/></p>
 		<p>Deadline: <input placeholder="pp.kk" type="text" th:field="${homework.deadline}"/></p>
+		<p>Your username: <input type="text" th:action="@{/username}" th:field=${homework.owner}/></p>
 		<div style="clear: both; display: block; height: 10px;"></div>						
 		<label for="list">Course: </label>
 		<select id="list" th:field="*{course}" class="form-control">
 	    	<option th:each="course: ${courses}" th:value="${course.courseId}" th:text="${course.name}"></option>
 	  	</select>
+	  	
+	  	<br/>
+		<br/>
 		<div style="clear: both; display: block; height: 10px;"></div>
-		<input type="submit" value="Save"/>
-		<input type="reset" value="Reset"/>
+		<input type="submit" value="Save" class="btn btn-primary"/>
+		<input type="reset" value="Reset" class="btn btn-primary"/>
 	</form>
-
+ 
     
 </body>
 </html>
