--- a/src/main/resources/templates/userWelcome.html
+++ b/src/main/resources/templates/userWelcome.html
@@ -6,10 +6,16 @@
 	    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 	</head>
 	<body>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-danger"/>
+		</form>
+	</div>
 		<h1>Welcome!</h1>    
 	</body>
 	<br/>
 	<br/>
-	<a href="/login" class="btn btn-primary">Login</a>
+	<a href="/userhomework" class="btn btn-primary">Your homework</a>
 	<a href="/courses" class="btn btn-primary">Courses</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homework" class="btn btn-primary">All homework</a>
 </html>
