--- a/src/main/resources/templates/courselist.html
+++ b/src/main/resources/templates/courselist.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html style=margin:4em xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<title>Courses</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-danger"/>
+		</form>
+	</div>
 	<h1>Courses</h1>
-	<table>
-		<tr>
-			<th> ID </th>
-			<th> Name </th>
-		</tr>
-		<tr th:each="course : ${courses}">
-			<td th:text="${course.courseId}">id</td>
-			<td th:text="${course.name}">name</td>
-			<td><a th:href="@{/deletecourse/{courseId}(courseId=${course.courseId})}">Delete</a></td>
-			<td><a th:href="@{/savecourse/{courseId}(courseId=${course.courseId})}">Edit</a></td>
-			
-		</tr>
-	</table>
-	<a href="/savecourse">Add course</a>
-	<a href="/homework">Homework</a>
+	<div>
+		<table class="table table-striped">
+			<tr>
+				<th> ID </th>
+				<th> Name </th>
+			</tr>
+			<tr th:each="course : ${courses}">
+				<td th:text="${course.courseId}">id</td>
+				<td th:text="${course.name}">name</td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-danger" th:href="@{/deletecourse/{courseId}(courseId=${course.courseId})}">Delete</a></td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-primary" th:href="@{/savecourse/{courseId}(courseId=${course.courseId})}">Edit</a></td>	
+			</tr>
+		</table>
+	</div>
+	<br/>
+	<br/>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/savecourse" class="btn btn-primary">Add course</a>
+	<a href="/userhomework" class="btn btn-primary">Your homework</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homework" class="btn btn-primary">All homework</a>
 </body>
 </html>
