edit korjattu, restit lisätty, yleistä pientä hiomista

--- a/src/main/resources/templates/courselist.html
+++ b/src/main/resources/templates/courselist.html
@@ -29,7 +29,7 @@
 	<br/>
 	<br/>
 	<a sec:authorize="hasAuthority('ADMIN')" href="/savecourse" class="btn btn-primary">Add course</a>
-	<a href="/userhomework" class="btn btn-primary">Your homework</a>
-	<a sec:authorize="hasAuthority('ADMIN')" href="/homework" class="btn btn-primary">All homework</a>
+	<a href="/userhomeworklist" class="btn btn-primary">Your homework</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homeworklist" class="btn btn-primary">All homework</a>
 </body>
 </html>
