--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,6 +20,8 @@
         </form>
         <br><br>
         <h6>// Homman helpottamiseksi</h6>
-        <p>Käyttäjät: <br> student1 <br> student2 <br> studentadmin <br><br>Kaikkien käyttäjien salasana on sama kuin käyttäjätunnus.</p>
+        <p>Käyttäjät: <br> student1 <br> student2 <br> admin <br><br>Kaikkien käyttäjien salasana on sama kuin käyttäjätunnus.</p>
+        <br><br>
+        <p>Huom: 2:n eri studentin pointti on vain varmistaa se, että kaikki todellisesti näkevät vain omat läksynsä. <br>Oikeudet ovat heille kuitenki samat.</p>
     </body>
 </html>
