--- a/src/main/resources/templates/userWelcome.html
+++ b/src/main/resources/templates/userWelcome.html
@@ -15,7 +15,7 @@
 	</body>
 	<br/>
 	<br/>
-	<a href="/userhomework" class="btn btn-primary">Your homework</a>
-	<a href="/courses" class="btn btn-primary">Courses</a>
-	<a sec:authorize="hasAuthority('ADMIN')" href="/homework" class="btn btn-primary">All homework</a>
+	<a href="/userhomeworklist" class="btn btn-primary">Your homework</a>
+	<a href="/courselist" class="btn btn-primary">Courses</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homeworklist" class="btn btn-primary">All homework</a>
 </html>
