--- a/src/main/resources/templates/userhomeworklist.html
+++ b/src/main/resources/templates/userhomeworklist.html
@@ -14,24 +14,24 @@
 	<h1>Homework</h1>
 	<table class="table table-striped">
 		<tr>
+			<th> Id </th>
 			<th> Task </th>
 			<th> Deadline </th>
 			<th> Course </th>
-			<th> Id </th>
 		</tr>
 		<tr th:each="homework : ${homeworks}">
 			<td th:text="${homework.homeId}">id</td>
 			<td th:text="${homework.task}">task</td>
 			<td th:text="${homework.deadline}">deadline</td>
 			<td th:text="${homework.course.name}">course</td>
-			<td><a  class="btn btn-danger" th:href="@{/deletehomework/{homeId}(homeId=${homework.homeId})}">Delete</a></td>
+			<td><a  class="btn btn-danger" th:href="@{/deleteuserhomework/{homeId}(homeId=${homework.homeId})}">Delete</a></td>
 			<td><a class="btn btn-primary" th:href="@{/savehomework/{homeId}(homeId=${homework.homeId})}">Edit</a></td>
 		</tr>
 	</table>
 	<br/>
 	<br/>
 	<a href="/savehomework" class="btn btn-primary">New Homework</a>
-	<a href="/courses" class="btn btn-primary">Courses</a>
-	<a sec:authorize="hasAuthority('ADMIN')" href="/homework" class="btn btn-primary">All homework</a>
+	<a href="/courselist" class="btn btn-primary">Courses</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homeworklist" class="btn btn-primary">All homework</a>
 </body>
 </html>
