--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,5 +11,5 @@
 	<br/>
 	<br/>
 	<a href="/login" class="btn btn-primary">Login</a>
-	<a href="/courses" class="btn btn-primary">Courses</a>
+	<a href="/courselist" class="btn btn-primary">Courses</a>
 </html>
