--- a/src/main/resources/templates/userhomeworklist.html
+++ b/src/main/resources/templates/userhomeworklist.html
@@ -31,7 +31,7 @@
 	<br/>
 	<br/>
 	<a href="/savehomework" class="btn btn-primary">New Homework</a>
-	<a href="/courselist" class="btn btn-primary">Courses</a>
-	<a sec:authorize="hasAuthority('ADMIN')" href="/homeworklist" class="btn btn-primary">All homework</a>
+	<a href="/courselist" class="btn btn-secondary">Courses</a>
+	<a sec:authorize="hasAuthority('ADMIN')" href="/homeworklist" class="btn btn-info">All homework</a>
 </body>
 </html>
