--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,6 +10,6 @@
 	</body>
 	<br/>
 	<br/>
-	<a href="/login" class="btn btn-primary">Login</a>
-	<a href="/courselist" class="btn btn-primary">Courses</a>
+	<a href="/login" class="btn btn-success">Login</a>
+	<a href="/courselist" class="btn btn-secondary">Courses</a>
 </html>
