--- a/src/main/resources/templates/homeworklist.html
+++ b/src/main/resources/templates/homeworklist.html
@@ -31,7 +31,7 @@
 	</table>
 	<br/>
 	<br/>
-	<a href="/courselist" class="btn btn-primary">Courses</a>
+	<a href="/courselist" class="btn btn-secondary">Courses</a>
 	<a sec:authorize="hasAuthority('ADMIN')" href="/userhomeworklist" class="btn btn-primary">User homework</a>
 </body>
 </html>
