--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
         <form th:action="@{/login}" method="post">
             <div><label> User Name : <input type="text" name="username"/> </label></div>
             <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In" class="btn btn-primary"/></div>
+            <div><input type="submit" value="Sign In" class="btn btn-success"/></div>
         </form>
         <br><br>
         <h6>// Homman helpottamiseksi</h6>
