--- a/src/main/resources/templates/savecourse.html
+++ b/src/main/resources/templates/savecourse.html
@@ -12,7 +12,7 @@
 		<p>Name: <input type="text" th:field="${course.name}"/></p>
 		
 		<div style="clear: both; display: block; height: 10px;"></div>
-		<input type="submit" value="Save" class="btn btn-primary"/>
+		<input type="submit" value="Save" class="btn btn-success"/>
 		<input type="reset" value="Reset" class="btn btn-primary"/>
 	</form>
 
