--- a/src/main/resources/templates/savehomework.html
+++ b/src/main/resources/templates/savehomework.html
@@ -21,7 +21,7 @@
 	  	<br/>
 		<br/>
 		<div style="clear: both; display: block; height: 10px;"></div>
-		<input type="submit" value="Save" class="btn btn-primary"/>
+		<input type="submit" value="Save" class="btn btn-success"/>
 		<input type="reset" value="Reset" class="btn btn-primary"/>
 	</form>
  
